# LibraryFEMTherm

./: .clang-format  .gitignore  CMakeLists-FileParse.txt  CMakeLists-FileParse.txt.in  CMakeLists-GTest.txt.in  CMakeLists-miniz.txt  CMakeLists-miniz.txt.in  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  python-bindings.yml  workflow.yml
cmake/: LibraryFEMTHERMCompilerFlags.cmake  LibraryFEMTHERMProjectMacros.cmake  LibraryFEMTHERMinternal_utils.cmake
doc/: LibraryFEMTHERM.md  LibraryFEMTHERM.md.in  python.md
python/: CMakeLists.txt  __init__.py
python/src/: bind_bc.cxx  bind_cma.cxx  bind_enums.cxx  bind_gases.cxx  bind_geometry.cxx  bind_glazing_system.cxx  bind_materials.cxx  bind_mesh.cxx  bind_mesh_results.cxx  bind_model.cxx  bind_preferences.cxx  bind_properties.cxx  bind_steady_state_results.cxx  bind_zip.cxx  module.cxx
python/tests/: conftest.py  test_bc_db.py  test_cru_properties.py  test_enums.py  test_gases_db.py  test_materials_db.py  test_mesh.py  test_mesh_results.py  test_steady_state_results.py  test_struct_creation.py  test_thmz_load_save.py  test_zip_module.py
src/BCSteadyState/: DB.cxx  DB.hxx  Operators.cxx  Operators.hxx  Serializers.hxx  SteadyState.cxx  SteadyState.hxx  Tags.cxx  Tags.hxx  Utils.cxx  Utils.hxx
src/BCTransient/: Definitions.hxx  Timestep.cxx  Timestep.hxx  TimestepSerializers.hxx  TypeOperators.cxx  TypeOperators.hxx  Types.cxx  Types.hxx  TypesSerializers.hxx  TypesTags.cxx  TypesTags.hxx
src/CMA/: CMA.cxx  CMA.hxx  DB.cxx  DB.hxx  Definitions.cxx  Definitions.hxx  Serializers.hxx  Tags.cxx  Tags.hxx
src/Common/: Common.cxx  Common.hxx  DB.hxx  GenericFunctions.hxx  GeometryDefinitions.cxx  GeometryDefinitions.hxx  GeometryDefintions.cxx
src/Gases/: DB.cxx  DB.hxx  Gases.cxx  Gases.hxx  Operators.cxx  Operators.hxx  Serializers.hxx  Tags.cxx  Tags.hxx
src/GeometryForResults/: DB.cxx  DB.hxx  Geometry.cxx  Geometry.hxx  Serializers.hxx
src/LibraryUtilities/: Common.hxx  Exceptions.cxx  Exceptions.hxx  FileManipulation.cxx  FileManipulation.hxx  PropertyDifference.cxx  PropertyDifference.hxx  StringRoutines.cxx  StringRoutines.hxx  TimeRoutines.cxx  TimeRoutines.hxx  Util.cxx  Util.hxx
src/Materials/: Common.cxx  Common.hxx  DB.cxx  DB.hxx  Definitions.hxx  Materials.cxx  Materials.hxx  Operators.cxx  Operators.hxx  Serializers.hxx  Tags.cxx  Tags.hxx
src/Schemas/: Attributes.thml  UFactors.thml
src/Schemas/Boundary Conditions Steady State/: BC Steady State.xsd  BoundaryConditionsSteadyState.xml
src/Schemas/Boundary Conditions Timestep/: BC_TS_ASHRAEInside.xml  BC_TS_ASHRAEOutside.xml  BC_TS_BoundaryConditionsASHRAE.xml  BC_TS_BoundaryConditionsFixedFilmExterior.xml  BC_TS_BoundaryConditionsFixedFilmExterior20.xml  BC_TS_BoundaryConditionsFixedFilmFixed20Steps.xml  BC_TS_BoundaryConditionsFixedFilmInterior.xml  BC_TS_BoundaryConditionsFixedFilmInterior20.xml  BC_TS_FixedFilmExterior.xml  BC_TS_FixedFilmInterior.xml  BC_TS_FixedHeatFluxExterior.xml  BC_TS_FixedHeatFluxInterior.xml  BC_TS_FixedTemperatureAndHumidityInside.xml  BC_TS_FixedTemperatureAndHumidityOutside.xml  BC_TS_Fixed_T_RH_HC_120 steps-Exterior.xml  BC_TS_Fixed_T_RH_HC_120 steps-Interior.xml  BC_TS_Kimura.xml  BC_TS_TARPFilmExterior.xml  BC_TS_TARPFilmInterior.xml  BC_TS_YazdanianKlems.xml  BoundaryConditionsTimestep.xsd
src/Schemas/Boundary Conditions Transient/: BoundaryConditionsTransient.xml  BoundaryConditionsTransient.xsd
src/Schemas/CMA Schema/: CMALibrary.xml  CMALibrary.xsd
src/Schemas/Gases Schema/: Gases.xml  Gases.xsd
src/Schemas/Materials Schema/: Materials.xml  Materials.xsd  MaterialsDistribution.xml  Materials_Full.xml
src/Schemas/Model Geometry For Results Schema/: ModelGeometryForResults.xsd
src/Schemas/THMX Schema/: CMA.xsd  Common.xsd  FileProperties.xsd  Geometry.xsd  GlazingSystem.xsd  Mesh.xsd  Preferences.xsd  SteadyStateMeshResults.xsd  SteadyStateResults.xsd  Therm.xsd
src/THMZ/CMA/: CMA.hxx  EnumSerializers.hxx  Enumerators.cxx  Enumerators.hxx  Serializers.hxx
src/THMZ/Common/: EnumSerializers.hxx  Enumerators.cxx  Enumerators.hxx
src/THMZ/Geometry/: EnumSerializers.hxx  Enumerators.cxx  Enumerators.hxx  Geometry.hxx  Serializers.hxx
src/THMZ/GlazingSystem/: EnumSerializers.hxx  Enumerators.cxx  Enumerators.hxx  GlazingSystem.hxx  Serializers.hxx
src/THMZ/Mesh/: DB.cxx  DB.hxx  Mesh.hxx  Serializers.hxx
src/THMZ/Model/: DB.cxx  DB.hxx  FrameCavityMigration.cxx  FrameCavityMigration.hxx  MigrationShim.cxx  MigrationShim.hxx  Serializers.hxx  THMX.hxx
src/THMZ/Preferences/: EnumSerializers.hxx  Enumerators.cxx  Enumerators.hxx  Preferences.hxx  Serializers.hxx
src/THMZ/Properties/: EnumSerializers.hxx  Enumerators.cxx  Enumerators.hxx  GravityProperties.cxx  GravityProperties.hxx  Properties.cxx  Properties.hxx  Serializers.hxx  Utilities.cxx  Utilities.hxx
src/THMZ/SteadyStateMeshResults/: DB.cxx  DB.hxx  Results.hxx  Serializers.hxx
src/THMZ/SteadyStateResults/: DB.cxx  DB.hxx  EnumSerializers.hxx  Enumerators.cxx  Enumerators.hxx  Results.hxx  Serializers.hxx
tst/: CMakeLists.txt  main.cxx
tst/helper/: BoundaryConditionsSteadyStateTestUtils.cxx  BoundaryConditionsSteadyStateTestUtils.hxx  GlazingSystemHelper.cxx  GlazingSystemHelper.hxx  HelperUtility.hxx  InputFileTestDatabase.cxx  InputFileTestDatabase.hxx  MaterialsHelper.cxx  MaterialsHelper.hxx  MockNodeAdapter.cxx  MockNodeAdapter.hxx  PreferencesHelper.cxx  PreferencesHelper.hxx  PropertiesHelper.cxx  PropertiesHelper.hxx  THMXGeometryHelper.cxx  THMXGeometryHelper.hxx  THMXHelper.cxx  THMXHelper.hxx  THMXMeshHelper.cxx  THMXMeshHelper.hxx  THMXSteadyStateMeshResultsHelper.cxx  THMXSteadyStateMeshResultsHelper.hxx  THMXSteadyStateResultsHelper.cxx  THMXSteadyStateResultsHelper.hxx  TestExamples.cxx  TestExamples.hxx  Utility.hxx  bcsteadyState1.cxx  bcsteadyState1.hxx  bctype1.cxx  bctype1.hxx  cma1.cxx  cma1.hxx  gases1.cxx  gases1.hxx  geometry1.cxx  geometry1.hxx  material1.cxx  material1.hxx
tst/products/: ID50_CS_single.thmz  SteadyStateBC.xml  sample-sill.thmz
(+64 files in other folders)
