[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "libraryfemtherm"
version = "0.17.0"
description = "Python bindings for LibraryFEMTherm – THMZ file parsing and thermal simulation data"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "LBNL-ETA", email = "SimonMN@lbl.gov"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/LBNL-ETA/LibraryFEMTherm"
Repository = "https://github.com/LBNL-ETA/LibraryFEMTherm"

[tool.scikit-build]
cmake.args = [
    "-DBUILD_PYTHON_BINDINGS=ON",
    "-DBUILD_LibraryFEMTHERM_TESTING=OFF",
]
cmake.build-type = "Release"

[tool.cibuildwheel]
build = ["cp311-*", "cp312-*", "cp313-*", "cp314-*"]
skip = ["*-win32", "*-musllinux*", "*-manylinux_i686"]
test-requires = ["pytest"]
test-command = "pytest {project}/python/tests -v"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
